Fixing spacing on dropdown menu items.

--- a/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
+++ b/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
@@ -81,7 +81,6 @@ $frontera-portal-color-primary: #9d85ef;
 
 .multiline-menu-item-wrapper {
   display: inline-block;
-  padding-left: 5px;
   line-height: 1.1em;
   small {
     display: block;
@@ -90,11 +89,11 @@ $frontera-portal-color-primary: #9d85ef;
 }
 
 .dropdown-item{
-  padding: 9px 5px;
+  padding: 10px 6px;
   size: 10px;
   color: #707070;
   i {
-      padding-right: 5px;
+      padding-right: 19px;
   }
   &:hover {
     color: #707070;
